--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -11,17 +11,58 @@ env:
   EKS_CLUSTER_NAME: ${{ secrets.EKS_CLUSTER_NAME }}
   FRONTEND_REPO: mern-frontend
   BACKEND_REPO: mern-backend
+  IMAGE_TAG: ${{ github.sha }}
 
+# ------------------------
+# JOB 1: BUILD & TEST
+# ------------------------
 jobs:
-  deploy:
+  build_test:
+    name: Build & Test
     runs-on: ubuntu-latest
 
     steps:
-      # 1️⃣ Checkout code
-      - name: Checkout repository
+      - name: Checkout code
         uses: actions/checkout@v4
 
-      # 2️⃣ Configure AWS credentials
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: 18
+
+      - name: Install frontend dependencies
+        working-directory: frontend
+        run: npm install
+
+      - name: Build frontend
+        working-directory: frontend
+        run: npm run build
+
+      - name: Install backend dependencies
+        working-directory: backend
+        run: npm install
+
+      # Optional tests (enable when ready)
+      # - name: Run frontend tests
+      #   working-directory: frontend
+      #   run: npm test
+
+      # - name: Run backend tests
+      #   working-directory: backend
+      #   run: npm test
+
+# ------------------------
+# JOB 2: BUILD & PUSH IMAGES
+# ------------------------
+  build_push:
+    name: Build & Push Docker Images
+    runs-on: ubuntu-latest
+    needs: build_test
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v4
         with:
@@ -29,48 +70,54 @@ jobs:
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: ${{ secrets.AWS_REGION }}
 
-      # 3️⃣ Login to Amazon ECR
       - name: Login to Amazon ECR
         uses: aws-actions/amazon-ecr-login@v2
 
-      # 4️⃣ Build & push FRONTEND
       - name: Build & push frontend image
         working-directory: frontend
         run: |
-          IMAGE_TAG=${GITHUB_SHA}
           docker build -t $AWS_ACCOUNT_ID.dkr.ecr.$AWS_REGION.amazonaws.com/$FRONTEND_REPO:$IMAGE_TAG .
           docker push $AWS_ACCOUNT_ID.dkr.ecr.$AWS_REGION.amazonaws.com/$FRONTEND_REPO:$IMAGE_TAG
 
-      # 5️⃣ Build & push BACKEND
       - name: Build & push backend image
         working-directory: backend
         run: |
-          IMAGE_TAG=${GITHUB_SHA}
           docker build -t $AWS_ACCOUNT_ID.dkr.ecr.$AWS_REGION.amazonaws.com/$BACKEND_REPO:$IMAGE_TAG .
           docker push $AWS_ACCOUNT_ID.dkr.ecr.$AWS_REGION.amazonaws.com/$BACKEND_REPO:$IMAGE_TAG
 
-      # 6️⃣ Install kubectl
+# ------------------------
+# JOB 3: DEPLOY TO EKS
+# ------------------------
+  deploy:
+    name: Deploy to EKS
+    runs-on: ubuntu-latest
+    needs: build_push
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v4
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: ${{ secrets.AWS_REGION }}
+
       - name: Install kubectl
         uses: azure/setup-kubectl@v4
-        with:
-          version: latest
 
-      # 7️⃣ Install Helm
       - name: Install Helm
         uses: azure/setup-helm@v4
 
-      # 8️⃣ Configure kubeconfig for EKS
       - name: Update kubeconfig
         run: |
           aws eks update-kubeconfig \
             --region $AWS_REGION \
             --name $EKS_CLUSTER_NAME
 
-      # 9️⃣ Deploy to EKS with Helm
-      - name: Deploy to EKS with Helm
+      - name: Helm deploy
         run: |
-          IMAGE_TAG=${GITHUB_SHA}
-
           helm upgrade --install mern helm/mern-app \
             --set frontend.image.repository=$AWS_ACCOUNT_ID.dkr.ecr.$AWS_REGION.amazonaws.com/$FRONTEND_REPO \
             --set frontend.image.tag=$IMAGE_TAG \
